<resources>
    <string name="app_name">Esewa_Project</string>
    <string name="esewa_logo">Esewa Logo</string>
    <string name="market">Market</string>
    <string name="notification_bell">Notification Bell</string>
    <string name="option">Option</string>
    <string name="john">Good morning John, Everything you will discover here</string>
    <string name="searchbar">Search Bar</string>
    <string name="searching">What are you searching for?</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="categories">Categories</string>
    <string name="images">Images</string>
    <string name="categories_images">Categories Images</string>
    <string name="mobile">Mobile</string>
    <string name="featured_products">Featured Products</string>
    <string name="products">Products</string>
    <string name="product_name">Product Name</string>
    <string name="brand">Brand</string>
    <string name="rs">Rs.</string>
    <string name="_8200">8200</string>
    <string name="plus_sign">Plus Sign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular">Most Popular</string>
    <string name="hot_deals">Hot Deals of The Day</string>
    <string name="popular_brand">Popular Brand</string>
    <string name="loading">LOADING...</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="shop">Shop</string>
    <string name="shop_icon">Shop Icon</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="cart">Cart</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="favourite">Favourite</string>
    <string name="more_icon">More Icon</string>
    <string name="more">More</string>
    <string name="jacket_in_nylon">Jacket In Nylon</string>
    <string name="rs_2500">Rs.2500</string>
    <string name="availability_in_stock">Availability : In Stock</string>
    <string name="description">Description</string>
    <string name="product_description">Product description</string>
    <string name="back_button">Back Button</string>
</resources>