<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomNav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingHorizontal="6dp"
    android:paddingVertical="12dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:id="@+id/navItemShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_bottom_nav"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginEnd="12dp">

        <ImageView
            android:id="@+id/iconShop"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/nav_shop"
            android:contentDescription="@string/shop_icon"
            app:tint="#28AD17" />

        <TextView
            android:id="@+id/textShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/shop"
            android:textColor="#28AD17"
            android:textStyle="bold"
            android:maxLines="1"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navItemCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginEnd="12dp">

        <ImageView
            android:id="@+id/iconCart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/nav_cart"
            android:contentDescription="@string/cart_icon"
            app:tint="#28AD17" />

        <TextView
            android:id="@+id/textCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cart"
            android:textColor="#28AD17"
            android:maxLines="1"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navItemFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:layout_marginEnd="12dp">

        <ImageView
            android:id="@+id/iconFavourite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/favourite_icon"
            app:tint="#28AD17" />

        <TextView
            android:id="@+id/textFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/favourite"
            android:textColor="#28AD17"
            android:textStyle="bold"
            android:maxLines="1"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navItemMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp"
        android:paddingHorizontal="12dp">

        <ImageView
            android:id="@+id/iconMore"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/nav_more"
            android:contentDescription="@string/more_icon"
            app:tint="#28AD17" />

        <TextView
            android:id="@+id/textMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/more"
            android:textColor="#28AD17"
            android:textStyle="bold"
            android:maxLines="1"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>