<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/esewa_logo"
                    android:src="@drawable/esewa_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_market"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/market"
                    android:src="@drawable/market"
                    app:layout_constraintBottom_toBottomOf="@+id/img_logo"
                    app:layout_constraintStart_toEndOf="@+id/img_logo" />

                <ImageView
                    android:id="@+id/img_bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:contentDescription="@string/notification_bell"
                    android:src="@drawable/notification_bell"
                    app:layout_constraintBottom_toBottomOf="@id/img_bell"
                    app:layout_constraintStart_toEndOf="@id/img_market"
                    app:layout_constraintTop_toTopOf="@+id/img_logo" />

                <ImageView
                    android:id="@+id/img_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/option"
                    android:src="@drawable/option"
                    app:layout_constraintBottom_toBottomOf="@id/img_bell"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_bell"
                    app:layout_constraintTop_toTopOf="@+id/img_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/john"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/john"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_edittext"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/searchbar"
                    android:src="@drawable/search" />

                <EditText
                    android:id="@+id/search_input"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/searching"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:singleLine="true"
                    android:textColorHint="#9E9E9E"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/filter_icon"
                    android:src="@drawable/filter" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_banner"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:id="@+id/layout_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:text="@string/categories"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/view_more_btn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_catergory" />

            <TextView
                android:id="@+id/featured_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:text="@string/featured_products"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/view_more_btn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_product" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/banner4"
                android:contentDescription="@string/images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>